--- a/authentication-lab/templates/signup.html
+++ b/authentication-lab/templates/signup.html
@@ -31,13 +31,36 @@
                 <input type="password"  name="password" minlength="6">
             </div>
         </div>
+        <div>
+        <!-- Name -->
+            <label>Full Name</label>
+            <div>
+                <input type="Name"  name="full_name" required>
+            </div>
+        </div>
+
+        <!-- Username -->
+        <div>
+            <label>Username*</label>
+            <div class="input-group">
+                <input type="Username"  name="username" required>
+            </div>
+        </div>      
+        <!-- Username -->
+        <div>
+            <label>Bio*</label>
+            <div class="input-group">
+                <input type="Bio"  placeholder = "up to 280 chars"name="bio" maxlength="280" required>
+            </div>
+        </div>
         
         <!-- Button -->
         <div>
             <input type="submit"/>
         </div>
     </form>
+    <font color="red">{{ error }}</font><br>
     <br>
-    <a href="/"><button>signin</button></a>
+    <a href="/">signin</a>
 </body>
 </html>
